# callbot-denoiser

./: denoise.py  extract_vads_stats.py  main.py  prepare_training_data.py  pyproject.toml  run_training.py  test_denoise.py  test_filter_dominant_speaker.py  test_wav2vec2_timing.py  train_wav2vec2_classifier.py  vad.py  wav2vec2_classifier.py  wav_to_embedding.py
denoise_data/: labels_v1.csv
